--- a/mintro.html
+++ b/mintro.html
@@ -19,7 +19,52 @@
             <a class="menu_button" href="minfo.html" target="_self">경력</a>
         </div>
     </header>
-    <div class="empty_space" style="height: 15px;"></div>
-
+    <div class="empty_space" style="height: 10px;"></div>
+    <section class="main-field">
+        <div id="intro-namebox">
+            <div id="intro-namebox-name">조민규<br></div>
+            <div id="intro-namebox-job">대학생<br></div>
+        </div>
+        <div id="intro-infobox">
+            <div id="intro-infobox-info">
+                <table>
+                    <tr>
+                        <td class="intro-infobox-info-cat">출생</td>
+                        <td class="intro-infobox-info-content">1996. 12. 18.<br>경상북도 안동</td>
+                    </tr>
+                    <tr>
+                        <td class="intro-infobox-info-cat">신체</td>
+                        <td class="intro-infobox-info-content">174cm, 71kg</td>
+                    </tr>
+                    <tr>
+                        <td class="intro-infobox-info-cat">소속</td>
+                        <td class="intro-infobox-info-content">동국대학교 (재학)</td>
+                    </tr>
+                    <tr>
+                        <td class="intro-infobox-info-cat">관심분야</td>
+                        <td class="intro-infobox-info-content">웹 개발</td>
+                    </tr>
+                </table>
+            </div>
+            <div id="intro-infobox-idphoto">
+                <img src="img/mingyu.jpg" style="width: 7em; height: 9em; border: 1px solid #d3ded3;">
+            </div>
+        </div>
+        <div class="ad">
+            <video muted autoplay loop>
+                <source src="video/SampleVideo.mp4" type="video/mp4">
+                <strong>Your browser does not support the video tag.</strong>
+            </video>
+        </div>
+        <div class="ad">
+            <video muted autoplay loop>
+                <source src="video/SampleVideo.mp4" type="video/mp4">
+                <strong>Your browser does not support the video tag.</strong>
+            </video>
+        </div>
+    </section>
+    <footer>
+        Copyright @ 2021 Cho-Mingyu
+    </footer>
 </body>
 </html>
