--- a/mcareer.html
+++ b/mcareer.html
@@ -10,14 +10,31 @@
 <body>
     <header>
         <div id="page_title">
-            조민규 홈페이지
+            My Page
         </div>
         <div id="menu_bar">
             <a class="menu_button" href="mintro.html" target="_self">소개</a>
-            <a class="menu_button" id="menu_button_now" href="mcareer.html" target="_self">업적</a>
+            <a class="menu_button" href="minfo.html" target="_self">인적</a>
             <a class="menu_button" href="mstudy.html" target="_self">학술</a>
-            <a class="menu_button" href="minfo.html" target="_self">경력</a>
+            <a class="menu_button" id="menu_button_now" href="mcareer.html" target="_self">사진</a>
         </div>
     </header>
+    <div class="empty_space" style="height: 10px;"></div>
+    <section class="main-body">
+        <div id="gallery-explanation">
+            ◈ 내가 먹은 음식들<br>
+        </div>
+        <div id="pictures">
+            <img src="img/p1.jpg" class="picture">
+            <img src="img/p2.jpg" class="picture">
+            <img src="img/p3.jpg" class="picture">
+            <img src="img/p4.jpg" class="picture">
+            <img src="img/p5.jpg" class="picture">
+            <img src="img/p6.jpg" class="picture">
+        </div>
+    </section>
+    <footer>
+        Copyright © 2021 Cho-Mingyu
+    </footer>
 </body>
 </html>
