--- a/minfo.html
+++ b/minfo.html
@@ -10,14 +10,67 @@
 <body>
     <header>
         <div id="page_title">
-            조민규 홈페이지
+            My Page
         </div>
         <div id="menu_bar">
             <a class="menu_button" href="mintro.html" target="_self">소개</a>
-            <a class="menu_button" href="mcareer.html" target="_self">업적</a>
+            <a class="menu_button" id="menu_button_now" href="minfo.html" target="_self">인적</a>
             <a class="menu_button" href="mstudy.html" target="_self">학술</a>
-            <a class="menu_button" id="menu_button_now" href="minfo.html" target="_self">경력</a>
+            <a class="menu_button" href="mcareer.html" target="_self">사진</a>
         </div>
     </header>
+    <div class="empty_space" style="height: 10px;"></div>
+    <section class="main-body">
+        <div class="info-section">
+            <h1>이름</h1>
+            <img src="img/korea.png" style="width:1.6em; height:1.3em;margin-right:0.5em;">조민규<br>
+            <img src="img/usa.png" style="width:1.6em; height:1.3em;margin-right:0.5em;">Cho Mingyu<br>
+            <img src="img/china.png" style="width:1.6em; height:1.3em;margin-right:0.5em;">趙民圭<br>
+        </div>
+        <div class="info-section">
+            <h1>생일</h1>
+            ⛄1996년 12월 18일⛄
+        </div>
+        <div class="info-section">
+            <h1>주소</h1>
+            <li>경상북도 안동시 배움길77, 안동센트럴자이</li>
+            <li>서울특별시 중구 동호로25길 37-10, 솔하우스</li>
+        </div>
+        <div class="info-section">
+            <h1>연락처</h1>
+            010-1234-5678
+        </div>
+        <div class="info-section">
+            <h1>학력</h1>
+            <table id="my-history">
+                <th>졸업년도</th>
+                <th>출신학교</th>
+                <tr>
+                    <td>2009.02</td>
+                    <td>송현초등학교</td>
+                </tr>
+                <tr>
+                    <td>2012.02</td>
+                    <td>경안중학교</td>
+                </tr>
+                <tr>
+                    <td>2015.02</td>
+                    <td>안동고등학교</td>
+                </tr>
+                <tr>
+                    <td>2015.11</td>
+                    <td>양지메가스터디 기숙학원</td>
+                </tr>
+                <tr>
+                    <td>2022.02</td>
+                    <td>동국대학교 (예정)</td>
+                </tr>
+            </table>     
+        </div>
+
+    </section>
+    <footer>
+        Copyright © 2021 Cho-Mingyu
+    </footer>
 </body>
 </html>
