--- a/mintro.html
+++ b/mintro.html
@@ -10,13 +10,13 @@
 <body>
     <header>
         <div id="page_title">
-            조민규 홈페이지
+            My Page
         </div>
         <div id="menu_bar">
             <a class="menu_button" id="menu_button_now" href="mintro.html" target="_self">소개</a>
-            <a class="menu_button" href="mcareer.html" target="_self">업적</a>
+            <a class="menu_button" href="minfo.html" target="_self">인적</a>
             <a class="menu_button" href="mstudy.html" target="_self">학술</a>
-            <a class="menu_button" href="minfo.html" target="_self">경력</a>
+            <a class="menu_button" href="mcareer.html" target="_self">사진</a>
         </div>
     </header>
     <div class="empty_space" style="height: 10px;"></div>
@@ -44,27 +44,26 @@
                         <td class="intro-infobox-info-cat">관심분야</td>
                         <td class="intro-infobox-info-content">웹 개발</td>
                     </tr>
+                    <tr>
+                        <td class="intro-infobox-info-cat">사이트</td>
+                        <td class="intro-infobox-info-content"><a href="https://github.com/win9612" target="_blank" style="color:blue;">GitHub</a></td>
+                    </tr>
                 </table>
             </div>
             <div id="intro-infobox-idphoto">
                 <img src="img/mingyu.jpg" style="width: 7em; height: 9em; border: 1px solid #d3ded3;">
             </div>
         </div>
-        <div class="ad">
+        <div class="empty_space" style="height: 10px;"></div>
+        <h1 style="text-align: center;">AD</h1>
+        <div class="ad" style="margin-bottom: 5em;">
             <video muted autoplay loop>
                 <source src="video/SampleVideo.mp4" type="video/mp4">
                 <strong>Your browser does not support the video tag.</strong>
             </video>
         </div>
-        <div class="ad">
-            <video muted autoplay loop>
-                <source src="video/SampleVideo.mp4" type="video/mp4">
-                <strong>Your browser does not support the video tag.</strong>
-            </video>
-        </div>
-    </section>
     <footer>
-        Copyright @ 2021 Cho-Mingyu
+        Copyright © 2021 Cho-Mingyu
     </footer>
 </body>
 </html>
