--- a/mstudy.html
+++ b/mstudy.html
@@ -10,14 +10,50 @@
 <body>
     <header>
         <div id="page_title">
-            조민규 홈페이지
+            My Page
         </div>
         <div id="menu_bar">
             <a class="menu_button" href="mintro.html" target="_self">소개</a>
-            <a class="menu_button" href="mcareer.html" target="_self">업적</a>
+            <a class="menu_button" href="minfo.html" target="_self">인적</a>
             <a class="menu_button" id="menu_button_now" href="mstudy.html" target="_self">학술</a>
-            <a class="menu_button" href="minfo.html" target="_self">경력</a>
+            <a class="menu_button" href="mcareer.html" target="_self">사진</a>
         </div>
     </header>
+    <div class="empty_space" style="height: 10px;"></div>
+    <section class="main-body">
+        <div class="info-section">
+            <h1>프로젝트</h1>
+            - 병렬 프로그래밍 프로젝트 -<br>
+            <iframe class="youtube" src="https://www.youtube.com/embed/fHLQ3mfKY_0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br>
+            - 딥러닝 기반 얼굴인식 프로젝트 -<br>
+            <img src="img/face_recognition.jpg" class="youtube">
+        </div>
+        <div class="info-section">
+            <h1>자격증</h1>
+            <table id="my-history">
+                <th>취득일자</th>
+                <th>자격증</th>
+                <tr>
+                    <td>2018.11.</td>
+                    <td>정보처리기능사</td>
+                </tr>
+                <tr>
+                    <td>2019.07.</td>
+                    <td>ACA 포토샵</td>
+                </tr>
+                <tr>
+                    <td>2019.08.</td>
+                    <td>토익 755점</td>
+                </tr>
+                <tr>
+                    <td>2021.07.</td>
+                    <td>정보처리기사</td>
+                </tr>
+            </table>
+        </div>
+    </section>
+    <footer>
+        Copyright © 2021 Cho-Mingyu
+    </footer>
 </body>
 </html>
