1차과제 최종

--- a/mintro.html
+++ b/mintro.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/mportpolio.css" rel="stylesheet" type="text/css">
-    <title>민규 - 자기소개</title>
+    <title>민규</title>
 </head>
 <body>
     <header>
@@ -55,7 +55,7 @@
             </div>
         </div>
         <div class="empty_space" style="height: 10px;"></div>
-        <h1 style="text-align: center;">AD</h1>
+        <h1 style="text-align: center;">Video</h1>
         <div class="ad" style="margin-bottom: 5em;">
             <video muted autoplay loop>
                 <source src="video/SampleVideo.mp4" type="video/mp4">
