--- a/minfo.html
+++ b/minfo.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/mportpolio.css" rel="stylesheet" type="text/css">
-    <title>민규 - 인적사항</title>
+    <title>민규</title>
 </head>
 <body>
     <header>
